==> rusefi/rusefi/firmware/config/boards/hellen/cypress/OS/os/hal/ports/Cypress/LLD/CANv2/hal_can_lld.c <==
#include <string.h>
#include "hal.h"
#define CAN_BUFFER_NOT_FOUND 0xff

void can_lld_init(void) {

#if CYPRESS_CAN_USE_CAN0
  /* Driver initialization.*/
  canObjectInit(&CAND1);
  CAND1.can = (stc_canfdn_t *)(&CANFD0);
#endif

#if CYPRESS_CAN_USE_CAN1
  /* Driver initialization.*/
  canObjectInit(&CAND2);
  CAND2.can = (stc_canfdn_t *)(&CANFD1);
#endif
}

void can_lld_start(CANDriver *canp) {

  memset(&canp->stcCanfdConfig, 0, sizeof(canp->stcCanfdConfig));

#if CYPRESS_CAN_USE_CAN0
  if (&CAND1 == canp) {
  	canp->can = (stc_canfdn_t*)&CANFD0;
    canp->stcCanfdConfig.pfnReceiveMsgCallback  = can_rx_received_callback0;
    canp->stcCanfdConfig.pfnTransmitMsgCallback = can_tx_complete_callback0;
    canp->stcCanfdConfig.pfnStatusCallback      = can_status_callback0;
    canp->stcCanfdConfig.pfnErrorCallback       = can_error_callback0;
  }
#endif

#if CYPRESS_CAN_USE_CAN1
  if (&CAND2 == canp) {
  	canp->can = (stc_canfdn_t*)&CANFD1;
    canp->stcCanfdConfig.pfnReceiveMsgCallback  = can_rx_received_callback1;
    canp->stcCanfdConfig.pfnTransmitMsgCallback = can_tx_complete_callback1;
    canp->stcCanfdConfig.pfnStatusCallback      = can_status_callback1;
    canp->stcCanfdConfig.pfnErrorCallback       = can_error_callback1;
  }
#endif

  memset(canp->is_rx_mailbox_occupied, 0, sizeof(canp->is_rx_mailbox_occupied));
  memset(canp->is_tx_mailbox_occupied, 0, sizeof(canp->is_tx_mailbox_occupied));

  // Configuring CAN
  Canpre_Init(CanfdPreDiv16);	// =1/6 (192MHz / 6 = 32MHz), see CYPRESS_PLL_FREQ

  // Set configuration parameters of CAN FD.
  canp->stcCanfdConfig.enCanfdMode = CanfdModeClassic;
  canp->stcCanfdConfig.enCanfdClock = CanfdClock32MHz;	// CAN operation clock: 32MHz

  // Initialize CAN FD.
  en_result_t res = Canfd_Init(canp->can, &canp->stcCanfdConfig);

  osalDbgAssert(res == Ok, "CAN: Canfd_Init failed");

  Canfd_Start(canp->can);
}

bool can_lld_is_tx_empty(CANDriver *canp, canmbx_t mailbox) {
	uint8_t idx = can_get_mailbox(mailbox, canp->is_tx_mailbox_occupied, sizeof(canp->is_tx_mailbox_occupied), true);
	if (idx == CAN_BUFFER_NOT_FOUND)
		return false;
    return !canp->is_tx_mailbox_occupied[idx];
}

void can_lld_transmit(CANDriver *canp,
                      canmbx_t mailbox,
                      const CANTxFrame *ctfp) {
	int i;

	// Request to send
	uint8_t bufIdx = can_get_tx_mailbox_and_occupy(canp, mailbox);
	// if all buffers are occupied, we cannot send
	if (bufIdx == CAN_BUFFER_NOT_FOUND)
		return;

	canp->stcTxMsg.stcIdentifier.bExtended = ctfp->IDE;
	canp->stcTxMsg.stcIdentifier.u32Identifier = ctfp->IDE ? ctfp->EID : ctfp->SID;
	// copy the data
	for (i = 0; i < ctfp->DLC; i++)
		canp->stcTxMsg.stcData.au8Data[i] = ctfp->data8[i];
	// CanfdModeClassic
	canp->stcTxMsg.stcData.u8DataLengthCode = ctfp->DLC;
	canp->stcTxMsg.bCanfd = FALSE;

	Canfd_TransmitMsg(canp->can, bufIdx, &canp->stcTxMsg);
}

bool can_lld_is_rx_nonempty(CANDriver *canp, canmbx_t mailbox) {
	uint8_t idx = can_get_mailbox(mailbox, canp->is_rx_mailbox_occupied, sizeof(canp->is_rx_mailbox_occupied), false);
	if (idx == CAN_BUFFER_NOT_FOUND)
		return false;
    return canp->is_rx_mailbox_occupied[idx];

}

void can_lld_receive(CANDriver *canp,
                     canmbx_t mailbox,
                     CANRxFrame *crfp) {
  int i;
  // we receive all messages from all mailboxes
  Canfd_ReceiveMsg(canp->can);
  Canfd_GetBusStatus(canp->can);

  uint8_t bufIdx = can_get_and_free_rx_mailbox(canp, mailbox);
  // no occupied buffers left
  if (bufIdx == CAN_BUFFER_NOT_FOUND)
  	return;

  stc_canfd_msg_t *stcRxMsg = &canp->stcRxMsg[bufIdx];
  
  // copy the frame
  crfp->IDE = stcRxMsg->stcIdentifier.bExtended;
  if (crfp->IDE)
    crfp->EID = stcRxMsg->stcIdentifier.u32Identifier;
  else
    crfp->SID = stcRxMsg->stcIdentifier.u32Identifier;
  crfp->DLC = stcRxMsg->stcData.u8DataLengthCode;
  // copy the data
  for (i = 0; i < crfp->DLC; i++)
    crfp->data8[i] = stcRxMsg->stcData.au8Data[i];

  // todo:
}
